--- a/css.css
+++ b/css.css
@@ -24,7 +24,7 @@ body {
 .menu {
     background-color: #000;
     display: flex;
-    height: 100px;
+    height: 80px;
     justify-content: space-between;
     align-items: center;
     position: fixed;
@@ -95,9 +95,15 @@ body {
 }
 .nosotros {
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: crimson;
+        }
+#columnas{
+        column-count:2;
+        column-gap:20px;
+        column-rule:4px groove gray; 
 }
+
 .productos {
     width: 100%;
     height: 100vh;
