--- a/Estilos.css
+++ b/Estilos.css
@@ -1,23 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
 
-*{
+/*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Nunito', sans-serif;
     text-decoration: none;
-}
-
-:root{
+}*/
+/*:root{
     --color-esqueleto:#EFF3F5;
-}
+}*/
 
-.header{
+/*.header{
     width: 100%;
     height: 60px;
     background: var(--color-esqueleto);
-}
+}*/
 
 .cover{
     width: 100%;
@@ -58,14 +57,14 @@ form{
 
 }
 
-h2 {
+/*h2 {
     color:#fff;
     text-align: center;
     margin:0;
     font-size:30px;
     margin-bottom:20px;
 
-}
+}*/
 input, textarea{
     width:100%;
     margin-bottom:20px;
@@ -91,27 +90,27 @@ textarea{
     cursor:pointer; 
 }
 
-
+/*
 @media (max-width:480px) {
     form{
         width:100%;        
     }
 
-h1{
+/*h1{
     text-align: center ;
     color:#fff;
     font-size:40px;
     background: rgba(0,0,0,0,4);   
     margin-top:20px; 
 
-}
+}}*/
 
 
 
 
 
 
-}
+
 
 
 
