--- a/css.css
+++ b/css.css
@@ -130,7 +130,11 @@ body {
     .content_icons {
         display: block;
     }
-
+    .inicio {
+        width: 100%;
+        height: 24vh;
+        background-color: cornflowerblue;
+    }
     .menu {
         height: 100vh;
         position: fixed;
