--- a/css.css
+++ b/css.css
@@ -1,3 +1,4 @@
+/*cesar*/
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 * {
     margin: 0;
@@ -162,3 +163,287 @@ body {
         margin-top: 1em;
     }
 }
+/*gianpier*/
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+
+
+/*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
+    text-decoration: none;
+}*/
+/*:root{
+    --color-esqueleto:#EFF3F5;
+}*/
+
+/*.header{
+    width: 100%;
+    height: 60px;
+    background: var(--color-esqueleto);
+}*/
+
+.cover{
+    width: 100%;
+    height: 500px;
+    background: var(--color-esqueleto);
+    margin-top: 20px;
+}
+
+.container__article{
+    max-width: 1000px;
+    padding: 0px 20px;
+    margin: auto;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.container__article .box__article{
+    width: 200px;
+    height: 250px;
+    background: var(--color-esqueleto);
+    margin: 20px;
+}
+
+/*Aquí debajo va el FOOTER*/
+
+
+
+form{
+    width: 450px;
+    margin: auto;
+    background: rgba(0,0,0,0.4);
+    padding:10px 20px;
+    box-sizing:border-box;
+    margin-top:60px;
+    border-radius:7px;
+
+}
+
+/*h2 {
+    color:#fff;
+    text-align: center;
+    margin:0;
+    font-size:30px;
+    margin-bottom:20px;
+}*/
+input, textarea{
+    width:100%;
+    margin-bottom:20px;
+    padding:7px;
+    box-sizing: border-box;
+    font-size:17px;    
+    border:none;
+}
+
+textarea{
+    min-height: 100px;
+    max-height: 200px;
+    max-width: 100%; ;
+}
+
+#boton{
+    background: #31384A;
+    color:#fff;
+    padding:20px;
+}
+
+#boton:hover  {
+    cursor:pointer; 
+}
+
+/*
+@media (max-width:480px) {
+    form{
+        width:100%;        
+    }
+/*h1{
+    text-align: center ;
+    color:#fff;
+    font-size:40px;
+    background: rgba(0,0,0,0,4);   
+    margin-top:20px; 
+}}*/
+
+footer{
+    width: 100%;
+    padding: 50px 0px;
+    background-image: url(../Images/background-footer.svg);
+    background-size: cover;
+       
+       
+}
+
+.container__footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 100px;
+}
+
+.box__footer{
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+}
+
+.box__footer .logo img{
+    width: 180px;
+}
+
+.box__footer .terms{
+    max-width: 350px;
+    margin-top: 20px;
+    font-weight: 500;
+    color: #7a7a7a;
+    font-size: 18px;
+}
+
+.box__footer h2{
+    margin-bottom: 30px;
+    color: #343434;
+    font-weight: 700;
+}
+
+.box__footer a{
+    margin-top: 10px;
+    color: #7a7a7a;
+    font-weight: 600;
+}
+
+.box__footer a:hover{
+    opacity: 0.8;
+}
+
+.box__footer a .fab{
+    font-size: 20px;
+}
+
+.box__copyright{
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+    padding: 0px 40px;
+}
+
+.box__copyright p{
+    margin-top: 20px;
+    color: #7a7a7a;
+}
+
+.box__copyright hr{
+    border: none;
+    height: 1px;
+    background-color: #7a7a7a;
+} 
+/*Mariana*/
+ 
+/*body {
+    background:#f8f7f6;
+  }*/
+  /*.box1 {
+    background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #E3E3E3;
+    opacity: 1;
+      
+  }*/
+  .box {
+    background: #F8F8F8 0% 0% no-repeat padding-box;
+    border: 1px solid #E3E3E3;
+    border-radius: 4px 4px 0px 0px;
+    opacity: 1;
+    height: auto;
+    width: 100%;
+  }
+  .box .box-item {
+    border-bottom: 1px solid rgb(245, 242, 242);
+    color: rgb(49, 17, 17);
+  }
+  .box .title {
+    margin: 0;
+    padding: 10px;
+    background-color: #8d86eb;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+  }
+  .box-item-content{
+      height: 0;
+      overflow: hidden;
+      background-color: rgb(208, 221, 223);
+      margin: 0;
+      padding-left: 20px;
+      transition: 0.5s;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      font-size: 18px;
+  }
+  ul{
+      list-style: none;
+  }
+  ul li{
+      padding-top: 10px;
+  }
+  .box:hover .box-item:hover .box-item-content {
+      height: 100px;
+  }
+
+
+/*p {
+    color:lightslategrey;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+}*/
+
+/*Santi*/
+.slider {
+    width: auto;
+    height: 100vh;
+    margin: auto;
+    overflow: hidden;
+}
+
+.slider ul {
+    padding: 0;
+    display: flex;
+    width: 400%;
+
+    animation: cambio 20s infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in;
+}
+
+.slider li{
+    list-style: none;
+    width: 100%;
+}
+
+.slider img{
+    width: 100%;
+}
+
+@keyframes cambio {
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+
+    75% {margin-left: -300%;}
+    100% {margin-left: -300%;}
+}
+
+.boton{
+    position: absolute;
+    left: 70px;
+    top: 350px;
+    
+}
+/*Leandro*/
