--- a/css.css
+++ b/css.css
@@ -23,7 +23,7 @@ body {
 }
 
 .menu {
-    background-color: #000;
+    background-color:rgba(0,0,0,0.4);
     display: flex;
     height: 80px;
     justify-content: space-between;
@@ -163,6 +163,76 @@ body {
         margin-top: 1em;
     }
 }
+.seccion2{
+    display: flex;
+    background-color: #E0752F;
+    align-items: center;
+    height:8vh;
+    text-align: center;
+    justify-content: center;
+}
+.section2 {
+    background-color: rgb(2, 250, 238);
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    margin-left: -7px;
+    margin-right: -7px;
+  }
+  
+  .section2 .section2__container {
+    border-color: #E0752F;
+    border-style: solid;
+    border-left-width: 32px;
+    border-top: none;
+    border-bottom: none;
+    border-right: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  
+  .section2 .section2__titulo {
+    width: 51%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+            justify-content: center;
+  }
+  
+  .section2 .section2__p2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 16px;
+    width: 70%;
+    padding-left: 20%;
+    padding-top: 4%;
+  }
 /*gianpier*/
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
