--- a/css.css
+++ b/css.css
@@ -233,6 +233,54 @@ body {
     padding-left: 20%;
     padding-top: 4%;
   }
+  /*Leandro */
+  .section3 {
+    width: 87.3rem;
+    height: 50rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to right, #f2f4f1 75%, #dce1da 25%);
+  }
+  .section3 .section3__casa {
+    background: url("casa-lago.png");
+    height: 34.5rem;
+    width: 60.3rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
+  .section3 .section3__casa .section3__recuardoNaranja {
+    background-color: #E0752F;
+    width: 29.5rem;
+    height: 19rem;
+  }
+  .section3 .section3__casa .section3__recuardoNaranja .section3_carousel {
+    display: flex;
+  }
+  .section3 .section3__casa .section3__recuardoNaranja .section3_carousel .section3_carousel_texto {
+    display: flex;
+    width: 101%;
+    padding: 13.5%;
+  }
+  .section3 .section3__casa .section3__recuardoNaranja .section3_carousel .section3_botones {
+    display: flex;
+  }
+  .section3 .section3__casa .section3__recuardoNaranja .section3_carousel .section3_botones .section3_botones1 {
+    display: flex;
+    width: 8%;
+    height: 90%;
+    align-items: flex-end;
+    margin-left: 72%;
+  }
+  .section3 .section3__casa .section3__recuardoNaranja .section3_carousel .section3_botones .section3_botones2 {
+    display: flex;
+    width: 10%;
+    height: 90%;
+    align-items: flex-end;
+    margin-right: 9%;
+  }
+  
 /*gianpier*/
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
